AC_PREREQ([2.69])

AC_INIT([Proctal], [0], [bugs@proctal.io], [proctal], [https://proctal.io])

AC_CONFIG_AUX_DIR([.])
AC_CONFIG_SRCDIR([src/api/include/proctal.h])
AC_CONFIG_HEADERS([config.h:config.h.in])
AC_CONFIG_FILES([Makefile])

AM_INIT_AUTOMAKE([foreign subdir-objects])
AM_SILENT_RULES([yes])

LT_PREREQ([2.4])
LT_INIT([dlopen])

AC_PROG_CC
AC_PROG_SED
PROCTAL_FIND_PROG([YUCK], [yuck])
PROCTAL_FIND_PROG([PHP], [php])

PROCTAL_ARFLAGS_FIX

AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT8_T
AC_TYPE_INT16_T
AC_TYPE_UINT16_T
AC_TYPE_INT32_T
AC_TYPE_UINT32_T
AC_TYPE_INT64_T
AC_TYPE_UINT64_T
AC_TYPE_LONG_DOUBLE
AC_TYPE_LONG_LONG_INT
AC_TYPE_UNSIGNED_LONG_LONG_INT
AC_TYPE_UINTPTR_T

PROCTAL_META
PROCTAL_INTEGER_ENDIANNESS
PROCTAL_CPU_ARCHITECTURE
PROCTAL_PLATFORM

PROCTAL_FIND_LIB([PROCTAL_CAPSTONE], [capstone], [cs_version])
PROCTAL_FIND_LIB([PROCTAL_KEYSTONE], [keystone], [ks_version])

PROCTAL_COMPILATION_FLAGS

PROCTAL_RELEASE_VERSION
PROCTAL_SO_VERSION([0], [0], [0])

PROCTAL_RUN_CONFIGURE([$srcdir/darr], [darr])
PROCTAL_RUN_CONFIGURE([$srcdir/acur], [acur])

AC_OUTPUT
