add_subdirectory(util)

function(test_python_script file)
    set(target_name cli_${file})

    relative_build_or_source(file ${file}.py)

    add_test(NAME ${target_name} COMMAND ${PYTHON} ${file})
endfunction()

test_python_script(allocate-permissions-default)
test_python_script(allocate-permissions)
test_python_script(deallocate)
test_python_script(dump-range)
test_python_script(execute-code)
test_python_script(invalid-type-arguments)
test_python_script(pattern-range)
test_python_script(pause-multiple-threads)
test_python_script(read-binary)
test_python_script(read-write)
test_python_script(search-boundaries)
test_python_script(search-permissions-default)
test_python_script(search-range)
test_python_script(search-review-range)
test_python_script(watch-multiple-threads)
test_python_script(watch-range)
test_python_script(watch-uncaught-trap-bug)
test_python_script(watch-unique)
test_python_script(write-binary)