function(test_single_c_file file)
    add_executable(otrap_${file} ${file}.c)
    target_link_libraries(otrap_${file} PRIVATE otrap)
    add_test(NAME otrap_${file} COMMAND otrap_${file})
endfunction()

test_single_c_file(read-nothing)
test_single_c_file(read-too-much)
test_single_c_file(read-twice)
test_single_c_file(read)
test_single_c_file(skip-nothing)
test_single_c_file(skip-too-much)
test_single_c_file(skip-twice)
test_single_c_file(skip)
