function(test_single_c_file file)
    add_executable(proctal_riter_${file} ${file}.c)
    target_link_libraries(proctal_riter_${file} PRIVATE proctal_riter)
    add_test(NAME proctal_riter_${file} COMMAND proctal_riter_${file})
endfunction()

test_single_c_file(init-defaults)
test_single_c_file(init-errors)
test_single_c_file(read-align)
test_single_c_file(read-end)
test_single_c_file(read-failure)
test_single_c_file(read-redundancy)
test_single_c_file(read)
test_single_c_file(reader-data)
