function(test_single_c_file file)
    add_executable(proctal_swbuf_${file} ${file}.c)
    target_link_libraries(proctal_swbuf_${file} PRIVATE proctal_swbuf)
    add_test(NAME proctal_swbuf_${file} COMMAND proctal_swbuf_${file})
endfunction()

test_single_c_file(address-offset-arithmetic)
test_single_c_file(init-fail-alloc)
test_single_c_file(init-succeed-alloc)
test_single_c_file(size)
test_single_c_file(swap)
